--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-scripts-ts": "2.8.0"
+    "react-graph-vis": "^1.0.2",
+    "react-scripts-ts": "2.8.0",
+    "react-split-pane": "^0.1.71"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -17,6 +19,7 @@
     "@types/jest": "^21.1.6",
     "@types/node": "^8.0.53",
     "@types/react": "^16.0.25",
-    "@types/react-dom": "^16.0.3"
+    "@types/react-dom": "^16.0.3",
+    "@types/react-split-pane": "^0.1.10"
   }
 }
