--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^1.0.0-beta.22",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-graph-vis": "^1.0.2",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/jest": "^21.1.6",
+    "@types/material-ui": "^0.18.5",
     "@types/node": "^8.0.53",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
