--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/package-lock.json
+/.vs/slnx.sqlite
+/.vs/config/applicationhost.config
+/.vs/UvicCourseCalendarUi/v15/.suo
