--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^8.0.57",
     "@types/react": "^16.0.28",
     "@types/react-dom": "^16.0.3",
-    "@types/react-split-pane": "^0.1.10"
+    "@types/react-split-pane": "^0.1.10",
+    "@types/vis": "^4.21.0"
   }
 }
