--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "autosuggest-highlight": "^3.1.1",
     "material-ui": "^1.0.0-beta.23",
     "react": "^16.2.0",
@@ -11,7 +12,7 @@
     "react-dom": "^16.2.0",
     "react-graph-vis": "^1.0.2",
     "react-scripts-ts": "2.8.0",
-    "react-split-pane": "^0.1.71"
+    "react-split-pane": "^0.1.77"
   },
   "scripts": {
     "build": "react-scripts-ts build",
@@ -19,6 +20,7 @@
     "test": "react-scripts-ts test --env=jsdom"
   },
   "devDependencies": {
+    "@types/inline-style-prefixer": "^3.0.1",
     "@types/jest": "^21.1.8",
     "@types/node": "^8.0.57",
     "@types/react": "^16.0.28",
