--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
+    "@material-ui/core": "^3.0.1",
+    "@material-ui/icons": "^1.1.1",
     "autosuggest-highlight": "^3.1.1",
-    "material-ui": "^1.0.0-beta.23",
-    "react": "^16.2.0",
-    "react-autosuggest": "^9.3.2",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.2",
+    "react-autosuggest": "^9.4.0",
+    "react-dom": "^16.4.2",
     "react-graph-vis": "^1.0.2",
     "react-scripts-ts": "2.8.0",
-    "react-split-pane": "^0.1.77"
+    "react-split-pane": "^0.1.82"
   },
   "scripts": {
     "build": "react-scripts-ts build",
@@ -21,12 +21,12 @@
   },
   "devDependencies": {
     "@types/inline-style-prefixer": "^3.0.1",
-    "@types/jest": "^21.1.8",
-    "@types/node": "^8.0.57",
-    "@types/react": "^16.0.28",
-    "@types/react-autosuggest": "^9.3.2",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-split-pane": "^0.1.10",
-    "@types/vis": "^4.21.0"
+    "@types/jest": "^21.1.10",
+    "@types/node": "^8.10.28",
+    "@types/react": "^16.4.13",
+    "@types/react-autosuggest": "^9.3.5",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-split-pane": "^0.1.67",
+    "@types/vis": "^4.21.7"
   }
 }
