--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.1",
+    "@material-ui/icons": "^3.0.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts-ts": "2.17.0"
+    "react-graph-vis": "^1.0.2",
+    "react-scripts-ts": "2.17.0",
+    "react-split-pane": "^0.1.82"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -18,6 +22,7 @@
     "@types/node": "^10.9.3",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
+    "@types/vis": "^4.21.7",
     "typescript": "^3.0.3"
   }
 }
