--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/inline-style-prefixer": "^3.0.1",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.9.3",
     "@types/react": "^16.4.13",
