--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.4.2",
     "react-graph-vis": "^1.0.2",
     "react-scripts-ts": "2.17.0",
+    "react-select": "^2.0.0",
     "react-split-pane": "^0.1.82"
   },
   "scripts": {
@@ -23,6 +24,7 @@
     "@types/node": "^10.9.3",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
+    "@types/react-select": "^2.0.3",
     "@types/vis": "^4.21.7",
     "typescript": "^3.0.3"
   }
