--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "uvic-course-dependencies-ui",
+  "name": "courselinks-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kgorgi.github.io/CourseLinks-Beta",
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "@material-ui/icons": "^3.0.1",
@@ -16,7 +17,9 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "@types/inline-style-prefixer": "^3.0.1",
